# AI-Research-Assistant

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_enable_pgvector_extension.py  0002_create_documents_and_chunks.py  0003_add_token_count_to_chunks.py  0004_add_chunk_count_to_documents.py
app/: main.py
app/api/: deps.py
app/api/v1/: documents.py  health.py  queries.py  router.py
app/core/: config.py  exceptions.py  logging.py
app/db/: __init__.py  session.py
app/models/: __init__.py  chunk.py  document.py  mixins.py
app/repos/: __init__.py  chunk_repository.py  document_repository.py
app/schemas/: common.py  document.py  health.py  search.py
app/services/: chunking_service.py  document_service.py  embedding_service.py
tests/: conftest.py  test_chunking.py  test_documents.py  test_embedding_service.py  test_health.py  test_upload_pipeline.py
