# ─────────────────────────────────────────────────────────────────────────────
# PROJECT METADATA
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "ai-research-assistant-api"
version = "0.1.0"
description = "Production-grade RAG API with FastAPI, pgvector, and Gemini"
requires-python = ">=3.12"

# ─────────────────────────────────────────────────────────────────────────────
# PRODUCTION DEPENDENCIES
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    # Core web framework — async-first, OpenAPI auto-docs built in
    "fastapi>=0.115.0,<1.0.0",

    # ASGI server with uvloop (faster event loop) + websocket support
    "uvicorn[standard]>=0.30.0,<1.0.0",

    # Data validation library — FastAPI is built on top of Pydantic v2
    "pydantic>=2.8.0,<3.0.0",

    # Plugin that adds .env file + environment variable loading to Pydantic
    "pydantic-settings>=2.4.0,<3.0.0",

    # Required by FastAPI to parse multipart/form-data (file uploads)
    "python-multipart>=0.0.9,<1.0.0",

    # Structured (JSON-based) logging
    "structlog>=24.0.0,<25.0.0",

    # Async HTTP client
    "httpx>=0.27.0,<1.0.0",

    # Retry library with exponential backoff — wraps Gemini API calls
    "tenacity>=8.5.0,<9.0.0",

    # Google's unified AI SDK — handles both embedding + LLM calls
    "google-genai>=1.0.0,<2.0.0",

    # SQLAlchemy 2.0 ORM with async support
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",

    # Pure async PostgreSQL driver
    "asyncpg>=0.29.0,<1.0.0",

    # pgvector client — Vector() column type + similarity search operators
    "pgvector>=0.3.0,<1.0.0",

    # Database migration tool for SQLAlchemy
    "alembic>=1.13.0,<2.0.0",

    # Pure-Python PDF text extraction
    "pypdf>=4.3.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# DEVELOPMENT-ONLY DEPENDENCIES
# Install with: uv pip install -e ".[dev]"
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=3.8.0,<4.0.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# BUILD SYSTEM
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# PACKAGE DISCOVERY — only include app/, exclude alembic/ and tests/
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

# ─────────────────────────────────────────────────────────────────────────────
# RUFF CONFIG
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

# ─────────────────────────────────────────────────────────────────────────────
# PYTEST CONFIG
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]